[package]
name = "bdkpi"
version = "0.1.0"
edition = "2021"

[dependencies]
bdk = { version = "0.15.0", default-feature = false, features = ["all-keys"] }
epd-waveshare = "0.5.0"
embedded-graphics-core = { version = "0.3.2", optional = true}
embedded-hal = {version = "0.2.4", features = ["unproven"]}
bit_field = "0.10.1"
embedded-graphics = "0.7.1"
embedded-hal-mock = "0.8"
linux-embedded-hal = "0.3"